renamed container to nav-container

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
           <nav>
-            <div id="container">
+            <div id="nav-container">
               <ul class="test">
                 <li>list item 1</li>
                 <li>list item 2</li>
