--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 
           <nav>
             <div id="nav-container">
-              <ul class="test">
-                <li>list item 1</li>
-                <li>list item 2</li>
-                <li>list item 3</li>
+              <!-- menu contact jobs -->
+              <ul class="nav-ul">
+                <li>menu</li>
+                <li>contact</li>
+                <li>jobs</li>
                 <li>list item 4</li>
               </ul>
             </div>
@@ -38,6 +39,12 @@
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
+
+          <p>
+            put photo grid with 12 food photos here
+          </p>
+          <!-- 12 or so photos sleek grid alignment demonstrating food -->
+          <!-- or carousel that displays them in container? -->
 
           </div>
       </main>
