updated a lot of the layout within index.html and adjusting the style sheet to fit

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
   <body>
 
         <header>
-          <h2><span id="hoverFix">Nadeen's Hermitage Haven</span></h2>
-          <nav>
-
-              <!-- menu contact jobs -->
-              <ul class="nav-ul">
-                <li>menu</li>
-                <li>contact</li>
-                <li>jobs</li>
-              </ul>
-
-          </nav>
+          <h2>
+            Nadeen's Hermitage Haven
+          </h2>
+            <nav>
+                <ul class="nav-ul">
+                  <li>menu</li>
+                  <li>contact</li>
+                  <li>jobs</li>
+                </ul>
+            </nav>
         </header>
 
       <main>
