--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   </head>
   <body>
 
+    <div id="bigWrapper">
+
         <header>
           <h2>
             Nadeen's Hermitage Haven
@@ -32,18 +34,23 @@
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
 
+        </div>  <!-- main-container -->
+      </main>
+
+      <div id="imageContainer">
+
           <p class="foodPics">
             <img src="http://www.placecage.com/c/200/200">
             <img src="http://www.placecage.com/100/100">
             <img src="http://www.placecage.com/g/200/200">
             <img src="http://www.fillmurray.com/g/300/300">
             <br />
-            <img src="http://www.placecage.com/c/100/100">
-            <img src="http://www.fillmurray.com/200/200">
+            <img src="http://www.placecage.com/gif/400/400">
+            <img src="http://www.fillmurray.com/1100/1100">
             <img src="http://www.fillmurray.com/100/100">
             <img src="http://www.fillmurray.com/g/400/400">
             <br />
-            <img src="http://www.placecage.com/c/900/900">
+            <img src="http://www.placecage.com/gif/900/900">
             <img src="http://www.placecage.com/900/900">
             <img src="http://www.placecage.com/g/900/900">
             <img src="http://www.fillmurray.com/g/500/500">
@@ -51,8 +58,11 @@
           <!-- 12 or so photos sleek grid alignment demonstrating food -->
           <!-- or carousel that displays them in container? -->
 
-          </div>
-      </main>
+        </div> <!-- imageContainer -->
+
+
+
+    </div>
 
 
 
