draft changes adding menu and contact page as well as a home link

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
           </h2>
             <nav>
                 <ul class="nav-ul">
-                  <li>menu</li>
-                  <li>contact</li>
-                  <li>jobs</li>
+                  <li><a href="index.html">home</a></li>
+                  <li><a href="menu.html">menu</a></li>
+                  <li><a href="contact.html">contact</a></li>
+                  <li><a href="#">jobs</a></li>
                 </ul>
             </nav>
         </header>
@@ -25,7 +26,11 @@
       <main>
 
         <div id="main-container">
-          <h3>Main area of website</h3>
+          <h3>Your little neighborhood joint.</h3>
+          <p>
+              If it's on our menu, we made it. Biscuits to Brussels, Nashville Hot Chicken & Waffles to Philly Cheesesteaks, it's all made to order. That fried pie you ordered wasn't made in the mornin'; it was made for you. The real question: do you want your Philly 'wit or witout onions?'
+          </p>
+
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
           </p>
